<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ERTriage</string>
    <string name="action_settings">Settings</string>
    <string name="greeting">Welcome to ERTriage!\n</string>
    <string name="select_task">Please select a task:\n</string>
    <string name="lookup_patient">Lookup Patient</string>
    <string name="new_update_visit">Update Patient Visit</string>
    <string name="update_visit">Update Patient Visit</string>
    <string name="save_visit">Save Patient Visit Records</string>
    <string name="view_visit">View Patient Visit Records</string>
    <string name="create_new_patient">Create New Patient</string>
    <string name="start_doctor_visit">Start a New Doctor Visit</string>
    <string name="list_patients">View Patient List</string>
    <string name="record_prescription">Record Prescription</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_lookup_patient">Lookup Patient</string>
    <string name="title_activity_new_visit">Create New Visit</string>
    <string name="title_activity_update_visit">Update Patient Visit</string>
    <string name="title_activity_save_visit">Save Visit Records</string>
    <string name="title_activity_view_visit">View Visit Records</string>
    <string name="lookup_enter_hcn">Enter the health card number of the patient you wish to lookup:</string>
    <string name="health_card">Health Card Number</string>
    <string name="temperature">Temperature</string>
    <string name="systolic">Systolic Blood Pressure</string>
    <string name="diastolic">Diastolic Blood Pressure</string>
    <string name="heartrate">Heart Rate</string>
    <string name="symptoms">Symptoms</string>
    <string name="button_submit">Submit</string>
    <string name="enter_new_visit">Please enter patient information to create a new visit record:</string>
    <string name="enter_update_visit">Please enter patient information to update a visit record:</string>
    <string name="saved_records">Patient visit records have been saved.</string>
    <string name="view_records">Enter the health card number of the patient you wish to view:</string>
    <string name="found_patient"></string>
    <string name="updated_patient"></string>
    <string name="login_text">Please enter user info to log in:</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="incorrect_username_toast">Username entered does not exist.</string>
    <string name="incorrect_password_toast">The password entered is incorrect.</string>
    <string name="name">Name</string>
    <string name="dob">Date of Birth: eg 1999\-10\-19</string>
    <string name="create_new_patient_greeting">Please enter patient information to create a new patient:</string>
    <string name="doctor_visit_greeting">Enter the healthcard number of the patient being seen by a doctor.</string>
    <string name="button_by_urgency">List Patients By Urgency</string>
    <string name="button_by_arrival">List Patients By Arrival Time</string>
    <string name="record_prescription_greeting">Enter patient and prescription information below:</string>
    <string name="med_name">Name of Medication</string>
    <string name="med_instructions">Medication Instructions</string>
    <string name="med_success">Prescription information added successfully.</string>
    <string name="title_activity_new_update_visit">New/Update Visit</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_create_patient">CreatePatientActivity</string>
    <string name="title_activity_doctor_visit">DoctorVisitActivity</string>
    <string name="title_activity_list_patients">ListPatientsActivity</string>
    <string name="title_activity_record_prescription">RecordPrescriptionActivity</string>
    <string name="error_input">Invalid Input Please Enter Again</string>

</resources>
