<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.ertriage3.CreatePatientActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_patient_greeting" />
    
    <EditText 
        android:id="@+id/new_patient_name_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"/>
    
    <EditText
        android:id="@+id/new_patient_dob_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dob" />
     
    <EditText 
        android:id="@+id/new_patient_hcn_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/health_card"/>
    
    <EditText
        android:id="@+id/new_patient_temp_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/temperature"
        android:inputType="numberDecimal" />
    
    <EditText 
        android:id="@+id/new_patient_systolic_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/systolic"/>
    
    <EditText 
        android:id="@+id/new_patient_diastolic_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/diastolic"/>
    
    <EditText 
        android:id="@+id/new_patient_heartrate_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/heartrate"/>
    
    <EditText 
        android:id="@+id/new_patient_symptoms_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/symptoms"/>
    
    <Button 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_submit"
        android:onClick="createNewPatient"/>
    
    <TextView
        android:id="@+id/updated_patient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updated_patient" />

</LinearLayout>