<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.ertriage3.RecordPrescriptionActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record_prescription_greeting" />
    
    <EditText 
        android:id="@+id/record_prescription_healthcard"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/health_card"/>
    
    <EditText 
        android:id="@+id/record_prescription_med_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/med_name"/>
    
    <EditText 
        android:id="@+id/record_prescription_med_instructions"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/med_instructions"/>
    
    <Button 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_submit"
        android:onClick="recordPrescription"/>

</LinearLayout>
